# lib-code-parser

./: .gitignore  CLAUDE.md  LICENSE  README.md  lib-code-parser.md  pyproject.toml
.claude/: gsd-file-manifest.json  gsd-install-state.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/spikes/: SP-1-general-control-flow-state.md  SP-2-sequence-branch-fidelity.md  SP-3-libclang-macos-arm64.md
docs/: 00-decision-log.md  01-user-stories.md  02-diagram-spec.md  03-diagram-generation.md  04-oss-selection.md  05-requirements.md  06-architecture.md  07-spec.md  08-common-view-pattern.md  09-extending.md  99-trace-matrix.md  README.md
frozen/2026-05-24-v0.1.0-spec/: lib-code-parser.md
lib_code_parser/: __init__.py  _cpp_cursor.py  _dispatch.py  _paths.py  ast_extractor.py  callgraph_builder.py  contract_extractor.py  executor.py  models.py  parser.py  trace_extractor.py  type_analyzer.py  type_dep_builder.py
lib_code_parser/adapters/: __init__.py  base.py  pyright.py
lib_code_parser/extractors/: __init__.py
lib_code_parser/frontends/: __init__.py  cpp.py  python.py
lib_code_parser/models/: __init__.py
scripts/: generate_v01_snapshot.py
tests/: conftest.py  test_fr01_ast_extractor.py  test_fr02_callgraph.py  test_fr03_type_analyzer.py  test_fr04_contract_extractor.py  test_fr05_trace_extractor.py  test_fr06_parser.py
tests/acceptance/: test_cpp_class_diagram.py  test_cpp_doxygen_contracts.py  test_dia01_class_diagram.py  test_dia02_sequence_diagram.py  test_dia03_component_diagram.py  test_dia04_package_diagram.py  test_dia05_state_fsm.py  test_dia06_return_substitution.py  test_fr01_function_extraction.py  test_fr02_callgraph.py  test_fr03_type_deps.py  test_fr04_contracts.py  test_fr05_trace_tags.py  test_fr06_disabled.py  test_spc01_function_spec.py  test_spc02_class_spec.py  test_spc04_contract_markers.py
tests/parity/: __init__.py  test_ast_05_one_parse.py  test_cpp_python_schema_parity.py  test_snapshot_v01_fixture.py  test_trc03_cpp_parity.py  test_trc_02_docstring.py  test_v01_v02_compat.py
tests/spikes/: __init__.py  test_sp1_control_flow_state.py  test_sp2_branch_fidelity.py
tests/unit/: test_ast_extractor.py  test_callgraph_builder.py  (+9 more)
(+281 files in other folders)
