[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-code-parser"
version = "0.1.0"
description = "Parse Python source files to extract function graphs, call graphs, type dependencies, and validator contracts"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "pyright"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib_code_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
