[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-code-parser"
version = "0.2.0"
description = "Deterministic Python/C++ source parser for AST primitives, diagrams, and specs (lib-diagram-parser compatible schema)"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.13.0,<3.0",
    # Note: lib-diagram-parser is intentionally NOT a hard dependency in Phase 1.
    # Per Plan 01-05 pre-resolved Open Question #5 and Plan 01-10 D-22 scope,
    # Phase 1 graph_base.py is self-contained (structural compatibility only —
    # no runtime import). Phase 3 (DIA-04) will re-add it when lib-diagram-parser
    # is published to PyPI and runtime import becomes required.
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "pyright",
    "pyright[nodejs]==1.1.409",
    "libclang==18.1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib_code_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
